[package]
name = "rustygrad"
version = "0.1.1"
edition = "2021"
description = "A tiny autograd engine inspired by micrograd"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
impl_ops = "0.1.1"
rand = "0.8.5"
uuid = { version = "1.3.0", features = ["v4"]}

[dev-dependencies]
petgraph = "0.6.3"
